# Diwan

./: Cargo.toml  Makefile  README.md  cargo.toml
diwan-cli/: Cargo.toml
diwan-cli/src/: main.rs
diwan-core/: Cargo.toml
diwan_bin/: Cargo.toml
diwan_cli/: Cargo.toml
diwan_cli/src/: main.rs
diwan_core/: Cargo.toml
diwan_core/src/: buffer.rs  core.rs  cursor.rs  editor.rs  lib.rs  viewport.rs
diwan_lib/: Cargo.toml
diwan_lib/src/: lib.rs
diwan_term/: Cargo.toml
diwan_term/src/: keybinds.rs  lib.rs
