[workspace]
members = ["diwan_cli", "diwan_term"]
resolver = "2"

[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3

[workspace.package]
description = "Diwan is a minimal rust text editor like vim :) "
version = "1.0.1"
edition = "2021"
authors = ["Abdogouhmad <gouhmad@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Abdogouhmad/Diwan"
